--- a/web-server/labelAnalysisServer/web/WEB-INF/web.xml
+++ b/web-server/labelAnalysisServer/web/WEB-INF/web.xml
@@ -14,8 +14,8 @@
     </description>
 
 	 <resource-ref> 
-        <description>Oracle Spring JNDI Datasource</description>
-        <res-ref-name>jdbc/mySqlConnectionPool</res-ref-name>
+        <description>DB Connection Pooling</description>
+        <res-ref-name>jdbc/dbCon</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
 	</resource-ref>
