--- a/web-server/labelAnalysisServer/web/WEB-INF/web.xml
+++ b/web-server/labelAnalysisServer/web/WEB-INF/web.xml
@@ -16,7 +16,7 @@
 	 <resource-ref> 
         <description>DB Connection Pooling</description>
         <res-ref-name>jdbc/dbCon</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
+        <res-type>org.apache.tomcat.jdbc.pool.DataSource</res-type>
         <res-auth>Container</res-auth>
 	</resource-ref>
 
